--- a/public/modules/Assignment5/Assignment5.html
+++ b/public/modules/Assignment5/Assignment5.html
@@ -22,7 +22,11 @@
 <br/>
 </form>
 </div>
-<div class="col-md-5">
-<div id="DropArea" class="DragArea"> Drag File Here</div>
+<div class="col-md-offset-1 col-md-5">
+<input type="text" id="DragAreaInput" class="DragArea" readonly=""   value="Drop your file" file-read=""/>
+<br/>
+<label>Result is:</label>
+<br/>
+<div id="FileOutput"></div>
 </div>
 </div>
