--- a/public/modules/Assignment5/Assignment5.html
+++ b/public/modules/Assignment5/Assignment5.html
@@ -23,7 +23,7 @@
 </form>
 </div>
 <div class="col-md-offset-1 col-md-5">
-<input type="text" id="DragAreaInput" class="DragArea" readonly=""   value="Drop your file" file-read=""/>
+<input type="text" id="DragAreaInput" class="DragArea"    value="Drop your file" file-read=""/>
 <br/>
 <label>Result is:</label>
 <br/>
